--- a/tools/obs-clock/style.css
+++ b/tools/obs-clock/style.css
@@ -3,6 +3,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Noto Sans JP';
+    font-size: 60px;
 }
 
 body {
@@ -16,10 +17,12 @@ body {
     height: 3rem;
     border-radius: 3rem 0 0 3rem;
     padding: 0 1.5rem 0 1rem;
+    max-width: 800px; /*  default value of OBS browser widget's width */
 }
 
 .Clock > img {
     vertical-align: middle;
+    height: 1.2rem;
 }
 
 .Clock > time {
