--- a/tools/timer/style.css
+++ b/tools/timer/style.css
@@ -31,6 +31,7 @@ button {
     color: var(--color-white1);
     background-color: var(--color-background5);
     border: var(--color-white1) solid 1px;
+    user-select: none;
 
     &:disabled {
         color: var(--color-white2);
@@ -114,7 +115,7 @@ body {
 
         #start-button {
             display: inline-block;
-            height: 42px;
+            height: 48px;
             width: calc(500px - 300px - 16px);
             vertical-align: super;
         }
@@ -132,7 +133,7 @@ body {
         .num-keys {
             display: grid;
             grid-template-columns: repeat(3, 1fr) 1.5fr;
-            grid-template-rows: repeat(4, 42px);
+            grid-template-rows: repeat(4, 48px);
             gap: 8px;
 
             #button-0 {
@@ -143,7 +144,7 @@ body {
         .other-keys {
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: repeat(2, 42px);
+            grid-template-rows: repeat(2, 48px);
             gap: 8px;
         }
     }
